hphp/hack/test/implemented_by_hhi/implemented_by_invalid_param.hhi.exp
ERROR: File "implemented_by_invalid_param.hhi", line 3, characters 21-23:
This attribute parameter should be a string literal (Typing[4127])
