hphp/hack/test/implemented_by_hhi/implemented_by_invalid_param.hhi
<?hh
class C {
  <<__ImplementedBy(123)>>
  public function myMethod(): int;
}
